2015-06-19 14:31:11 dpenkler

	* [r1637] Added SCM version to ibvers output for bootstrap users

2015-06-18 18:14:31 dpenkler

	* [r1636] Add lib/ibVers.c file to svn

2015-06-18 18:10:02  dpenkler

	* [r1635] Added ibvers() to return current version of linux-gpib.
		  - Bumped library interface number.
                  - Added -v, --version option to gpib_config.

2015-06-18 09:41:36 dpenkler

        * [r1634] Fix command arguments for pc2 driver

2015-04-29 11:41:05 dpenkler

	* [r1633] Patches for python 3 support from bessman

2015-04-25 10:19:18 dpenkler

	* [r1632] Prepare for 4.0 release
	- Bumped version number to 4.0.0 to mark change in kernel interface for modules.
	User space interface is unchanged.
	- Added udev hotplug support for usb adaptors
	- Added Keysight products to supported hardware list in doc
	- Removed some compile time warnings

2015-04-13 20:17:57 fmhess

	* [r1631] Fixed board-level serial polls.

2015-04-04 16:53:48 fmhess

	* [r1630] Fixed some issues with restartable signals, added
        support for ni-usb-hs stop.

2015-03-28 23:24:11 fmhess

	* [r1629] Some tweaks to make tracking of RFD holdoff state
	more reliable.

2015-03-27 03:02:38 fmhess

	* [r1628] Fixed read/write/cmd ioctls so they properly restart
	after being interrupted by a signal. Had to make
	an incompatible change to the library/kernel interface!
        New lib won't work with old kernel drivers and
        vice versa (EDVR errors on ibrd, ibwrt, and ibcmd).

2015-03-26 23:37:50 fmhess

	* [r1627] Fixed vulnerability to spurious wakeup.

2015-03-25 08:35:02 dpenkler

	* [r1626] f_path patch for 3.19.x and above kernels

2015-03-23 20:05:36 fmhess

	* [r1625] Fixed short "-c" option for gpib_config.

2014-12-13 14:56:26

	* [r1624] Tag for 3.2.21 release

2014-12-13 18:30 dpenkler

	* [r1623] Make tag for 3.2.21 Release

2014-12-13 18:30 dpenkler

	* [r1622] Reformat INSTALL and mention ibterm

2014-11-20 18:30 dpenkler
